# Full-Stack-Todo-App

./: .env.example  .gitignore  .vercelignore  CLAUDE.md  README.md  deployment-fix.patch  final-changes.patch  fixed-vercel-patch.diff  package-lock.json  package.root.json  vercel.json  verify_implementation.py
.claude/agents/: auth-agent.md  database-neon-agent.md  fastapi-backend-agent.md  frontend-nextjs-agent.md
.specify/memory/: constitution.md
backend/: .env.example  .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  run_server.py  start_server.py  test_db.py  test_imports.py  test_registration.py  test_registration_logic.py
backend/app/: database.py  main.py
backend/app/api/: deps.py
backend/app/api/v1/: auth.py  tasks.py
backend/app/core/: config.py  security.py
backend/app/models/: task.py  user.py
backend/app/schemas/: task.py
backend/src/: config.py  database.py  db.py  main.py
backend/src/api/: auth_router.py  deps.py  error_handlers.py  main.py
backend/src/middleware/: auth_middleware.py
backend/src/models/: user.py
backend/src/services/: user_service.py
backend/src/utils/: auth_utils.py  jwt_utils.py
backend/tests/: conftest.py  test_auth.py  test_auth_validation.py  test_invalid_signature.py  test_tasks.py
frontend/: .env.example  README.md  middleware.ts  next.config.js  package-lock.json  package.json  vercel.json
frontend/app/: layout-client-wrapper.tsx  layout.tsx  page.tsx  root-layout.tsx
frontend/hooks/: use-auth.ts
frontend/types/: index.ts
shared/: constants.ts  env.d.ts
(+76 files in other folders)
